--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						My Portfolio</h1>
-						<p> </p>
+						<h1>React Native<br />
+						Developer</h1>
+						<p>with passion for learning</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -35,34 +35,38 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-						</ul>
-						<ul class="icons">
-							<li><a class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#aboutme">About Me</span></a></li>
+							<li><a href="#projects">Projects</span></a></li>
+							<li><a href="#contactme">Contact Me</span></a></li>
+							<li><a href="./Abdullah Azzam CV" target="_blank">CV/Resume</span></a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
+
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a >And this is a<br />
-									my project</a></h2>
-									<p>I create some applications with react native <br /> framework from learning at udemy online course.</p>
-								</header>
-								<a class="image main"><img src="images/pic01.png" alt="" /></a>
-								<!-- <ul class="actions special">
-									<li><a class="button large">Full Story</a></li>
-								</ul> -->
-							</article>
+						<article>
+							<header class="major">
+								<h2 id="aboutme">About Me</h2>
+								<p><img src="images/pic01.png" alt="" width="30%" /></p>
+								<p>I create some applications with react native <br /> framework from learning at udemy online course.</p>
+							</header>  <br /> <br /> 
+							<br />
+						</article>
+
+						<article>
+							<header class="major">
+								<h2 id="projects">These Are My Projects</h2>
+							</header>
+						</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a>Music Album Application</a></h2>
+										<h3>Music Album Application</h3>
 									</header>
 									<a class="image fit"><img src="images/pic02.png" alt="" /></a>
 									<p>This application is for showing music album list and then the user can buy the album from amazon website by click the button.</p>
@@ -71,7 +75,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a>Topic List Application</a></h2>
+										<h3>Topic List Application</h3>
 									</header>
 									<a class="image fit"><img src="images/pic03.png" alt="" /></a>
 									<p>This application is to show a list of some topics, and when the user tap a topic the detail of the topic will show with pop up animation.</p>
@@ -82,7 +86,7 @@
 							<section class="post featured">
 								<article>
 									<header>
-										<h2><a>Basic User Login Form Application</a></h2>
+										<h3>Basic User Login Form Application</h3>
 									</header>
 									<a class="image fit"><img src="images/pic04.png" alt="" /></a>
 									<p>This application is the basic login form for user. This application connected to firebase authentication, the system will automaticly sign up user when user click the button. If the user typed the wrong password, the error message will show on the screen.</p>
@@ -93,11 +97,11 @@
 							<section class="post featured">
 								<article>
 									<header>
-										<h2><a>Employee Manage Application</a></h2>
+										<h3>Employee Manage Application</h3>
 									</header>
 									<a class="image fit"><img src="images/pic05.png" alt="" /></a>
 									<a class="image fit"><img src="images/pic06.png" alt="" /></a>
-									<p>This application for manager in the corporate, this for maintain internal employee. The manager account added from the firebase authentication. The manager can add some employees by click add button and fill the employe form, the employee list will show after click save button. The manager can edit the employee by click one employee of the list. After choose the employee, the manager can edit shift and phone number. The manager can send a message to the employee after change the shift by click the Text Schedule button. The manager can fire the employee if don't satisfied with the employee by click Fire Employee button. </p>
+									<p>This application for manager in the corporate, this for maintain internal employee. The manager account added from the firebase authentication. The manager can add some employees by click add button and fill the employe form, the employee list will show after click save button. The manager can edit the employee by click one employee of the list. After choose the employee, the manager can edit shift and phone number. The manager can send a message to the employee after change the shift by click the Text Schedule button. The manager can fire the employee if don't satisfied with the employee by click Fire Employee button.</p>
 									<ul class="actions special">
 									</ul>
 								</article>
@@ -105,9 +109,40 @@
 
 					</div>
 
+					<!-- Footer -->
+					<footer id="footer">
+						<section>
+							<header>
+								<h2 id="contactme">Contact Me</h2>
+							</header>
+						</section>
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p>Komplek Timah Blok CC No. 21<br />
+								Cimanggis, Depok</p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a>+6281318313420</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a>abdullahazzam24@gmail.com</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.linkedin.com/in/abdullah-azzam-286a67195" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/AbdullahAzzam24/react-native-projects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
+
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Abdullah Azzam</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
