edit typo downlod link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<li><a href="#aboutme">About Me</span></a></li>
 							<li><a href="#projects">Projects</span></a></li>
 							<li><a href="#contactme">Contact Me</span></a></li>
-							<li><a href="./Abdullah Azzam CV" target="_blank">CV/Resume</span></a></li>
+							<li><a href="./Abdullah Azzam CV.pdf" target="_blank">CV/Resume</span></a></li>
 						</ul>
 					</nav>
 
